--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "postinstall": "husky install",
     "release-it-after-bump": "scripts/release-it-after-bump.sh",
     "tsc-diagnostics": "scripts/tsc-diagnostics.sh",
-    "pm2": "pm2"
+    "pm2": "pm2",
+    "typedoc": "typedoc"
   },
   "devDependencies": {
     "@apidevtools/swagger-cli": "^4.0.4",
@@ -67,6 +68,7 @@
     "release-it": "^15.5.0",
     "ts-jest": "^27.1.5",
     "ts-node-dev": "^2.0.0",
+    "typedoc": "^0.23.22",
     "typescript": "^4.8.4",
     "webpack": "^5.74.0",
     "zx": "^6.2.5"
