fix(yt:backend): typo for mongodb indexes build, close #774

--- a/platforms/yttrex/backend/config/settings.json
+++ b/platforms/yttrex/backend/config/settings.json
@@ -1,19 +1,19 @@
 {
   "schema": {
-      "supporters": "supporters",
-      "htmls": "htmls",
-      "metadata": "metadata",
-      "stats": "trexstats",
-      "leaves": "leaves",
-      "errors": "errors",
-      "answers": "answers",
-      "recommendations": "recommendations",
-      "ytvids": "ytvids",
-      "experiments": "experiments2",
-      "emails": "emails",
-      "tokens": "tokens",
-      "creators": "creators",
-      "ads": "ads"
+    "supporters": "supporters",
+    "htmls": "htmls",
+    "metadata": "metadata",
+    "stats": "trexstats",
+    "leaves": "leaves",
+    "errors": "errors",
+    "answers": "answers",
+    "recommendations": "recommendations",
+    "ytvids": "ytvids",
+    "experiments": "experiments",
+    "emails": "emails",
+    "tokens": "tokens",
+    "creators": "creators",
+    "ads": "ads"
   },
   "mongoHost": "localhost",
   "mongoPort": 27017,
