--- a/platforms/yttrex/backend/package.json
+++ b/platforms/yttrex/backend/package.json
@@ -50,6 +50,7 @@
     "nconf": "^0.11.3",
     "node-fetch": "^2.6.7",
     "numeral": "^2.0.6",
+    "object-sizeof": "^1.6.3",
     "ts-endpoint": "^2.0.0",
     "ts-endpoint-express": "^2.0.0",
     "ts-io-error": "^2.0.0",
