--- a/platforms/guardoni/tsconfig.json
+++ b/platforms/guardoni/tsconfig.json
@@ -35,7 +35,7 @@
     "synchronousWatchDirectory": true
   },
   "ts-node": {
-    "require": ["tsconfig-paths/register"],
+    "require": ["tsconfig-paths/register", "dotenv/config"],
     "compilerOptions": {
       "module": "CommonJS"
     }
