chore(workspace): replaced 'jsdom' with 'linkedom'

--- a/platforms/yttrex/backend/package.json
+++ b/platforms/yttrex/backend/package.json
@@ -42,7 +42,7 @@
     "geoip-lite": "^1.4.6",
     "io-ts": "^2.2.16",
     "io-ts-types": "^0.5.16",
-    "jsdom": "^16.7.0",
+    "linkedom": "^0.14.21",
     "module-alias": "^2.2.2",
     "moment": "^2.29.4",
     "mongodb": "^4.12.1",
@@ -63,7 +63,6 @@
     "@types/cors": "^2.8.12",
     "@types/geoip-lite": "^1",
     "@types/jest": "^27.5.2",
-    "@types/jsdom": "^16.2.14",
     "@types/module-alias": "^2",
     "@types/nconf": "^0.10.2",
     "@types/node": "^16.11.68",
