--- a/platforms/tktrex/backend/package.json
+++ b/platforms/tktrex/backend/package.json
@@ -34,7 +34,7 @@
     "geoip-lite": "^1.4.6",
     "io-ts": "^2.2.16",
     "io-ts-types": "^0.5.19",
-    "jsdom": "^16.7.0",
+    "linkedom": "^0.14.21",
     "lodash": "^4.17.21",
     "module-alias": "^2.2.2",
     "moment": "^2.29.4",
@@ -50,7 +50,6 @@
     "@types/eslint": "^8",
     "@types/express": "^4.17.13",
     "@types/geoip-lite": "^1.4.1",
-    "@types/jsdom": "^16",
     "@types/lodash": "^4.14.186",
     "@types/module-alias": "^2",
     "@types/node": "^16.11.68",
