--- a/platforms/yttrex/backend/package.json
+++ b/platforms/yttrex/backend/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "clean": "rm -rf ./build",
     "build": "tsc -b tsconfig.build.json",
-    "watch": "key=fuffa ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/server",
+    "watch": "key=fuffa ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --inspect=4320 bin/server",
     "start": "node build/bin/server",
     "parserv": "node build/bin/parser",
-    "parserv:watch": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/parser",
+    "parserv:watch": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --inspect=4321 bin/parser",
     "leaveserv": "node build/bin/leaves-parser.js",
-    "leaveserv:watch": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/leaves-parser.ts",
+    "leaveserv:watch": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --inspect=4322 bin/leaves-parser.ts",
     "test": "jest",
     "campaigns": "node bin/campaignUpdater.js --dest https://youtube.tracking.exposed",
     "type-check": "tsc",
