fix(shared): replace 'jsdom' with 'linkedom' to prevent the parser from crashing for memory allocation failure (#859)

--- a/platforms/yttrex/backend/package.json
+++ b/platforms/yttrex/backend/package.json
@@ -6,19 +6,20 @@
   "scripts": {
     "clean": "rm -rf ./build",
     "build": "tsc -b tsconfig.build.json",
-    "watch": "key=fuffa ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/server",
+    "watch": "key=fuffa ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --inspect=4320 bin/server",
     "start": "node build/bin/server",
     "parserv": "node build/bin/parser",
-    "parserv:watch": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/parser",
+    "parserv:watch": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --inspect=4321 bin/parser",
     "leaveserv": "node build/bin/leaves-parser.js",
-    "leaveserv:watch": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/leaves-parser.ts",
+    "leaveserv:watch": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --inspect=4322 bin/leaves-parser.ts",
     "test": "jest",
     "campaigns": "node bin/campaignUpdater.js --dest https://youtube.tracking.exposed",
     "type-check": "tsc",
     "lint": "eslint ./bin ./lib ./models ./routes",
     "open-doc-api": "ts-node bin/open-doc-api.ts",
     "old_start_old": "log=$(bash -c 'git log -30 --stat --oneline --decorate --graph') DEBUG=\"*,-body-parser:*,-express:*,-lib:*,-follow-redirects\" ts-node -r tsconfig-paths/register bin/server",
-    "clean-test-db": "DEBUG=\"yt:*\" ts-node ./scripts/clean-test-db.ts"
+    "clean-test-db": "DEBUG=\"yt:*\" ts-node ./scripts/clean-test-db.ts",
+    "reset-htmls-processed": "ts-node bin/reset-htmls-processed"
   },
   "author": "Claudio Agosti <claudio@tracking.exposed> and https://github.com/tracking-exposed/yttrex/graphs/contributors",
   "license": "AGPL-3.0",
@@ -42,7 +43,7 @@
     "geoip-lite": "^1.4.6",
     "io-ts": "^2.2.16",
     "io-ts-types": "^0.5.16",
-    "jsdom": "^16.7.0",
+    "linkedom": "^0.14.21",
     "module-alias": "^2.2.2",
     "moment": "^2.29.4",
     "mongodb": "^4.12.1",
@@ -63,7 +64,6 @@
     "@types/cors": "^2.8.12",
     "@types/geoip-lite": "^1",
     "@types/jest": "^27.5.2",
-    "@types/jsdom": "^16.2.14",
     "@types/module-alias": "^2",
     "@types/nconf": "^0.10.2",
     "@types/node": "^16.11.68",
