--- a/.github/workflows/gh_release.yml
+++ b/.github/workflows/gh_release.yml
@@ -35,6 +35,7 @@ jobs:
             platforms/guardoni/build
             platforms/guardoni/dist
             platforms/ycai/studio/build
+          enableCrossOsArchive: true
 
       - name: Install dependencies
         run: yarn
@@ -102,6 +103,7 @@ jobs:
             platforms/guardoni/build
             platforms/guardoni/dist
             platforms/ycai/studio/build
+          enableCrossOsArchive: true
 
       - name: Install dependencies
         run: yarn
@@ -134,6 +136,7 @@ jobs:
             platforms/guardoni/build
             platforms/guardoni/dist
             platforms/ycai/studio/build
+          enableCrossOsArchive: true
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
